# 2Chip8

./: .gitignore  CMakeLists.txt  cpu.c  cpu.h  main.c
include/: cpu.h
src/: cpu.c  main.c
